<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F9FA"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/melody_generator"
            android:textColor="#333333"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:textColor="#333333"
            android:textSize="16sp" />

        <!-- Input Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_melody_parameters"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <Spinner
            android:id="@+id/dropdownInitialNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/inputMelodyLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/melody_length"
            android:inputType="number"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="8dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/inputInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/interval"
            android:inputType="number"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="16dp"
            android:padding="8dp" />

        <Button
            android:id="@+id/generateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_melody"
            android:backgroundTint="#5673F5"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp" />

        <!-- Results Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recursive_melody_output"
                android:textColor="#333333"
                android:textSize="16sp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/outputRecursive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E0E0E0"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                android:textColor="#333333" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iterative_melody_output"
                android:textColor="#333333"
                android:textSize="16sp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/outputIterative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E0E0E0"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                android:textColor="#333333" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/running_time_comparison"
                android:textColor="#333333"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recursive"
                    android:textColor="#3F51B5"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/iteratif"
                    android:textColor="#3F51B5"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/timeRecursive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#E0E0E0"
                    android:padding="8dp"
                    android:textColor="#333333"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/timeIterative"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#E0E0E0"
                    android:padding="8dp"
                    android:textColor="#333333"
                    android:gravity="center"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/playMelodyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_melody"
            android:backgroundTint="#5673F5"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/stopMelodyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_melody"
            android:backgroundTint="#5673F5"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp" />

    </LinearLayout>
</ScrollView>
